<resources>
    <string name="app_name">Sparta_Week4_SelfIntroductionApp</string>

    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>

    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="exit">종료</string>

    <string name="sign_in_fail_warning">이름 또는 비밀번호가 틀렸습니다!</string>
    <string name="sign_up_fail_warning">회원가입에 실패했습니다!</string>

    <string name="empty_name_warning">이름을 입력해주세요.</string>
    <string name="same_name_warning">이미 존재하는 이름입니다.</string>

    <string name="empty_email_warning">이메일을 입력해주세요.</string>
    <string name="email_provider_hint">\@_____.com</string>
    <string-array name="email_providers_array">
        <item>\@naver.com</item>
        <item>\@gmail.com</item>
        <item>직접 입력</item>
    </string-array>

    <string name="empty_password_warning">비밀번호를 입력해주세요.</string>
    <string name="password_length_information">10자리 이상 입력해주세요.</string>
    <string name="password_uppercase_information">대문자를 포함해주세요.</string>
    <string name="password_special_char_information">특수문자를 포함해주세요.</string>

    <string name="password_different_warning">입력한 비밀번호와 같지 않습니다.</string>

    <string name="no_message"></string>

    <string name="upload_image">이미지 업로드</string>
    <string name="delete_image">이미지 삭제</string>

    <string name="home_name">내 이름은 %s입니다.</string>
    <string name="home_email">내 이메일은 %s입니다.</string>
</resources>