<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    tools:context=".sign_up.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/milk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이름"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empty_name_warning"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_name_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_name_warning"
            android:textColor="@color/warning_color"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이메일"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/empty_email_warning"
                android:inputType="text"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_email_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email_provider_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_email_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_email_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_email_warning"
            android:textColor="@color/warning_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비밀번호"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empty_password_warning"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_password_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_password_warning"
            android:textColor="@color/warning_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비밀번호 확인"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/empty_password_warning"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_password_check_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_password_warning"
            android:textColor="@color/warning_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sign_up_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_fail_warning"
        android:textColor="@color/warning_color"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_blue"
        android:text="회원가입"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>